home.html dinamically display available processes and  their abstracts.
used flake8 to check code

--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <a href="http://pywps.org"><img src="http://pywps.org/images/pywps.png"/></a>
+        <a href="{{ request_url }}"><img src="http://pywps.org/images/pywps.png"/></a>
         <ul style="list-style-type: none;">
           <li><a href="http://pywps.org/docs">Docs</a></li>
           <li><a href="http://pywps.org/download">Download</a></li>
