--- a/templates/home.html
+++ b/templates/home.html
@@ -7,11 +7,22 @@
 <p>
 	<code>{{ server_url }}</code>
 </p>
+<p>
+	<a href='{{ server_url }}?request=GetCapabilities&service=WPS'
+		target="_blank" title='{{ server_url }}?request=GetCapabilities&service=WPS'> <img
+		src="/static/pics/PyWPS-GetCapabilities-brightgreen.svg" />
+	</a> <a
+		href='{{ server_url }}?request=DescribeProcess&service=WPS&identifier=all&version=1.0.0'
+		target="_blank" title='{{ server_url }}?request=DescribeProcess&service=WPS&identifier=all&version=1.0.0'> <img
+		src="/static/pics/PyWPS-DescribeProcess-green.svg" />
+	</a>
+</p>
 It exposesthe following processes:
 <ul>
-      {% for name, abstract in process_descriptor.items() %}
-          <li> <b>{{ name }}</b>  - {{ abstract }} </li>
-      {% endfor %}
+	{% for name, abstract in process_descriptor.items() %}
+	<li><b>{{ name }}</b> - {{ abstract }}</li> &nbsp;&nbsp;  
+	<a href='{{ server_url }}?request=DescribeProcess&service=WPS&identifier=all&version=1.0.0' target="_blank" title='{{ server_url }}?request=DescribeProcess&service=WPS&identifier={{ name }}&version=1.0.0'> <img src="/static/pics/PyWPS-DescribeProcess-green.svg" /></a>
+	{% endfor %}
 </ul>
 <p></p>
 <p>
