--- a/templates/home.html
+++ b/templates/home.html
@@ -2,14 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>PyWPS-4 demo app</title>
+    <title>PyWPS demo app</title>
     <link rel="stylesheet"
       href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
   </head>
 
   <body>
     <div class="container">
-      <h1>PyWPS-4 demo app</h1>
+      <h1>PyWPS demo app</h1>
 
       <p>This is a demo PyWPS server, point your WPS client to
       <code>{{ url }}</code>. It exposes a few processes:</p>
@@ -35,10 +35,10 @@
         PyWPS documentation is at
         <a href="http://pywps.rtfd.org/">pywps.rtfd.org</a>;
         source code and issue tracking at
-        <a href="https://github.com/jachym/pywps-4/">
-        github.com/jachym/pywps-4</a>. Code for this app is at
-        <a href="https://github.com/jachym/pywps-4/tree/master/demo">
-        github.com/jachym/pywps-4/tree/master/demo</a>.
+        <a href="https://github.com/geopython/pywps/">
+        github.com/geopython/pywps</a>. Code for this app is at
+        <a href="https://github.com/geopython/pywps-demo">
+        github.com/geopython/pywps-demo</a>.
       </p>
     </div>
   </body>
