--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,7 @@
 
-{% extends "base.html" %} {% block title %}PyWPS-4 demo app{% endblock
-%} {% block major_content%}
+{% extends "base.html" %}
+ {% block title %}PyWPS-4 demo app{% endblock %} 
+ {% block major_content%}
 <br />
 <h1>PyWPS-4 demo app</h1>
 
@@ -18,13 +19,15 @@
 		src="/static/pics/PyWPS-DescribeProcess-green.svg" />
 	</a>
 </p>
-It exposesthe following processes:
+It exposes the following processes:
 <ul>
 	{% for name, abstract in process_descriptor.items() %}
 	<li><b>{{ name }}</b> - {{ abstract }}</li> &nbsp;&nbsp;  
 	<a href='{{ server_url }}?request=DescribeProcess&service=WPS&identifier=all&version=1.0.0' target="_blank" title='{{ server_url }}?request=DescribeProcess&service=WPS&identifier={{ name }}&version=1.0.0'> <img src="/static/pics/PyWPS-DescribeProcess-green.svg" /></a>
 	{% endfor %}
 </ul>
+
+
 <p></p>
 <p>
 	PyWPS documentation is at <a href="http://pywps.rtfd.org/"
@@ -36,26 +39,6 @@ It exposesthe following processes:
 		github.com/geopython/pywps-demo/blob/master/demo.py</a>.
 </p>
 
-
-
-
-      <ul>
-        <li>
-          <b>say_hello</b> -
-          returns a literal string output based on the input.
-        </li>
-
-        <li>
-          <b>feature_count</b> -
-          counts number of features in the uploaded GML.
-        </li>
-
-        <li>
-          <b>centroids</b> -
-          returns GeoJSON with centroids of features in the uploaded GML.
-        </li>
-      </ul>
-
       <p>
         PyWPS documentation is at
         <a href="http://pywps.rtfd.org/">pywps.rtfd.org</a>;
@@ -65,6 +48,5 @@ It exposesthe following processes:
         <a href="https://github.com/geopython/pywps-demo">
         github.com/geopython/pywps-demo</a>.
       </p>
-    </div>
-  </body>
-</html>
+
+{% endblock major_content%}
