--- a/templates/home.html
+++ b/templates/home.html
@@ -1,11 +1,11 @@
 
 {% extends "base.html" %}
- {% block title %}PyWPS-4 demo app{% endblock %} 
+ {% block title %}PyWPS-4 example service{% endblock %} 
  {% block major_content%}
 <br />
-<h1>PyWPS-4 demo app</h1>
+<h1>PyWPS-4 example service</h1>
 
-<p>This is a demo PyWPS server, point your WPS client to:
+<p>This is an example PyWPS service, point your WPS client to:
 <p>
 	<code>{{ server_url }}</code>
 </p>
@@ -34,9 +34,9 @@ It exposes the following processes:
 		target="_blank">pywps.rtfd.org</a>; source code and issue tracking at
 	<a href="https://github.com/geopython/pywps" target="_blank">
 		github.com/geopython/pywps</a>. Code for this app is at <a
-		href="https://github.com/geopython/pywps-demo/blob/master/demo.py"
+		href="https://github.com/geopython/pywps-flask/blob/master/demo.py"
 		target="_blank">
-		github.com/geopython/pywps-demo/blob/master/demo.py</a>.
+		github.com/geopython/pywps-flask/blob/master/demo.py</a>.
 </p>
 
       <p>
@@ -45,8 +45,8 @@ It exposes the following processes:
         source code and issue tracking at
         <a href="https://github.com/geopython/pywps/">
         github.com/geopython/pywps</a>. Code for this app is at
-        <a href="https://github.com/geopython/pywps-demo">
-        github.com/geopython/pywps-demo</a>.
+        <a href="https://github.com/geopython/pywps-flask">
+        github.com/geopython/pywps-flask</a>.
       </p>
 
 {% endblock major_content%}
